# JamesEngine

./: .gitattributes  .gitignore  Assets.txt  CMakeLists.txt  FixedUpdateTimes.txt  FullBrushTireForces.xlsx  LinearBrushTireForces.xlsx  README.md  RenderFeaturesToImplement.txt  RenderingTimes.txt  SlipRatioNoForceDecrease.xlsx  UMLDiagram.dia~
Doxygen/html/: _audio_8h_source.html  _audio_source_8h_source.html  _box_collider_8h_source.html  _camera_8h_source.html  _component_8h_source.html  _core_8h_source.html  _entity_8h_source.html  _g_u_i_8h_source.html  _input_8h_source.html  _james_engine_2_font_8h_source.html  _james_engine_2_model_8h_source.html  _james_engine_2_shader_8h_source.html  _james_engine_2_texture_8h_source.html  _james_engine_8h_source.html  _keyboard_8h_source.html  _mesh_8h_source.html  _model_renderer_8h_source.html  _mouse_8h_source.html  _render_texture_8h_source.html  _renderer_2_font_8h_source.html  _renderer_2_model_8h_source.html  _renderer_2_shader_8h_source.html  _renderer_2_texture_8h_source.html  _resource_8h_source.html  _resources_8h_source.html  _rigidbody_8h_source.html  _skybox_8h_source.html  _skybox_texture_8h_source.html  _sound_8h_source.html  _timer_8h_source.html  _transform_8h_source.html  _triangle_renderer_8h_source.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_james_engine_1_1_audio-members.html  class_james_engine_1_1_audio.html  class_james_engine_1_1_audio_source-members.html  class_james_engine_1_1_audio_source.html  class_james_engine_1_1_audio_source.js  (+268 more)
Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
assets/hl_assets/crossfire/: crossfire_3D.mtl
assets/hl_assets/de_dust/: de_dust.mtl
assets/hl_assets/scientists/einstein/: einstein.mtl
assets/hl_assets/scientists/luther/: luther.mtl
assets/hl_assets/scientists/slick/: slick.mtl
assets/models/Austria/Source/: austria.mtl  austria5.mtl
assets/models/Imola/: Imola.glb  ImolaShadow.glb
assets/models/Mercedes/: RearBrake.glb  SteeringWheel.glb
assets/models/NewMercedes/: FrontBrake.glb
assets/models/track/: cartoon_track_trimmed.mtl
assets/save/: fastestLap.txt
assets/shaders/: BloomUpsampleAdd.frag  BlurShader.frag  BrightPass.frag  CompositeShader.frag  DepthOnly.frag  DepthOnly.vert  DepthOnlyAlpha.frag  DepthOnlyAlpha.vert  Downsample2x.frag  GUIShader.frag  GUIShader.vert  GenerateBRDFLUT.frag  GenerateBRDFLUT.vert  GenerateIrradianceMap.frag  GenerateIrradianceMap.vert  GeneratePrefilteredEnvMap.frag  GeneratePrefilteredEnvMap.vert  ObjShader.frag  ObjShader.vert  OcclusionBoxShader.frag  OcclusionBoxShader.vert  SSAOShader.frag  SSAOShader.vert  ScalarBlurShader.frag  ScalarBlurShader.vert  ToneMap.frag  Vec3BlurShader.frag
assets/skyboxes/HDRsky/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
contrib/cl-windows-x84_64/lib/: ccd.lib
contrib/cl-windows-x84_64/lib/Release/: ccd.lib
contrib/include/fcl/: config.h  export.h
src/JamesEngine/: Audio.cpp  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.h  Component.cpp  Component.h  Controller.cpp  Controller.h  Core.cpp  Core.h  CylinderCollider.cpp  CylinderCollider.h  Entity.cpp  Entity.h  Font.cpp  Font.h  GUI.cpp  GUI.h  Input.cpp  Input.h  JamesEngine.h  Keyboard.cpp  Keyboard.h  LightManager.h  MathsHelper.cpp  MathsHelper.h  Mesh.cpp  Mesh.h  Model.h  ModelCollider.cpp  ModelCollider.h  ModelRenderer.cpp  ModelRenderer.h  Mouse.h  (+33 more)
src/Renderer/: Font.cpp  Font.h  Mesh.cpp  Mesh.h  Model.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/demo/: Drivetrain.cpp  Drivetrain.h  Engine.cpp  Engine.h  Suspension.cpp  Suspension.h  Tire.cpp  Tire.h  main.cpp
